@@ -3,17 +3,18 @@
     data: function() {
       return {
         atBottom: true,
+        scrolling: 0,
         scrollElement: null,
         scrollThreshold: 60
       };
     },
     watch: {
-      'settings.windowHeight': function(v, o) {
-        if (this._atBottomTid) return;
+      'settings.screenHeight': function(v, o) {
+        if (!this.scrolling++) return;
         var atBottom = this.atBottom;
-        this._atBottomTid = setTimeout(function() {
+        setTimeout(function() {
+          this.scrolling = 0;
           this.scrollToBottom({gotoBottom: atBottom});
-          this._atBottomTid = 0;
         }.bind(this), 300);
       }
     },
@@ -26,24 +27,24 @@
           this.dialog.historicMessages({}, function(err, cb) {
             var scrollHeight = elem.scrollHeight;
             if (cb) cb();
-            if (self.atBottom) return self.scrollToBottom({});
             window.nextTick(function() { elem.scrollTop = elem.scrollHeight - scrollHeight - 100; });
           });
         }
       },
       scrollToBottom: function(args) {
         var elem = this.scrollElement;
-        if (this.atBottom || args.gotoBottom) {
-          window.nextTick(function() { elem.scrollTop = elem.scrollHeight; });
+        if (!this.scrolling++ && (this.atBottom || args.gotoBottom)) {
+          window.nextTick(function() {
+              this.scrolling = 0;
+              elem.scrollTop = elem.scrollHeight;
+          }.bind(this));
         }
       }
     },
     ready: function() {
-      this.scrollElement = $(".scroll-element", this.$el)[0];
+      this.scrollElement = this.$el.querySelector(".scroll-element");
       this.scrollElement.addEventListener("scroll", this.onScroll);
-      this.dialog.on("active", function() { this.scrollToBottom({gotoBottom: true}); }.bind(this));
       this.dialog.on("message", this.scrollToBottom);
-      this.scrollToBottom();
     },
     beforeDestroy: function() {
       this.scrollElement.removeEventListener("scroll", this.onScroll);
